--- a/mybib.bib
+++ b/mybib.bib
@@ -35,6 +35,48 @@ url = {http://www.popphoto.com/news/2013/05/how-many-photos-are-uploaded-to-inte
     pdf = {http://hal.inria.fr/inria-00633013/PDF/jegou\_aggregate.pdf},
 }
 
+@InProceedings{JegouChum12,
+  IS = { zkontrolovano 15 Jan 2013 },
+  UPDATE  = { 2012-12-27 },
+  editor     = {Fitzgibbon, Andrew and Lazebnik, Svetlana and 
+                Perona, Pietro and Sato, Yoichi and Schmid, Cordelia},
+  booktitle  = {Computer Vision - ECCV 2012 - Part II},
+  publisher  = {Springer},
+  address    = {Heidelberg, Germany},
+  series     = {Lecture Notes in Computer Science},
+  volume     = {7573},
+  year       = {2012},
+  isbn       = {978-3-642-33708-6},
+  author     = {J{\' e}gou, Herv{\' e} and Chum, Ond{\v r}ej},
+  title      = {Negative Evidences and Co-occurences in Image Retrieval: 
+                The Benefit of PCA and Whitening},
+  pages      = {774--787},
+  book_pages = {889},
+  month      = {October},
+  day        = {7-13},
+  venue      = {Florence, Italy},
+  annote = {The paper addresses large scale image retrieval with short
+    vector representations. We study dimensionality reduction by
+    Principal Component Analysis (PCA) and propose improvements to its
+    different phases.We show and explicitly exploit relations between
+    i) mean subtraction and the negative evidence, i.e., a visual word
+    that is mutually missing in two descriptions being compared, and
+    ii) the axis de-correlation and the co-occurrences
+    phenomenon. Finally, we propose an effective way to alleviate the
+    quantization artifacts through a joint dimensionality reduction of
+    multiple vocabularies. The proposed techniques are simple, yet
+    significantly and consistently improve over the state of the art
+    on compact image representations. Complementary experiments in
+    image classification show that the methods are generally
+    applicable.},
+  keywords =   {image retrieval, short codes, PCA},
+  prestige =   {important},
+  authorship = {50-50},
+  note =       {CD-ROM},
+  project =    {GACR P103/12/2310, Quaero project by OSEO},
+  psurl =      {http://cmp.felk.cvut.cz/~chum/papers/Jegou-ECCV12.pdf},
+}
+
 
 @inproceedings{Perronnin2007,
   author    = {Florent Perronnin and
@@ -670,6 +712,13 @@ keywords =    {structure  from motion, remove procedure call, web service},
   year = {2013},
 }
 
+@article{Aubry13,
+  title={Painting-to-{3D} Model Alignment Via Discriminative Visual Elements},
+  author={M. Aubry and B. Russell and J. Sivic},
+  year={2014},
+  journal="ACM Transactions on Graphics",
+}
+
 @InProceedings{Aubry14,
    author = "Aubry, M. and Maturana, D. and Efros, A. and Russell, B. and Sivic, J. ",
    title = "Seeing {3D} chairs: exemplar part-based {2D}-{3D} alignment
@@ -683,4 +732,12 @@ using a large dataset of {CAD} models",
   author={Scholkopf, Bernhard and Smola, Alex},
   year={2002},
   publisher={MIT press, Cambridge}
+}
+
+@inproceedings{Hays2008,
+  Author    = {James Hays and Alexei A. Efros},
+  Title     = {im2gps: estimating geographic information from a single image},
+  Booktitle = {Proceedings of the {IEEE} Conf. 
+               on Computer Vision and Pattern Recognition ({CVPR})},
+  Year      = {2008},
 }
